# factory2

./: .containerignore  Containerfile  README.md  entrypoint.sh  monitor.sh  pyproject.toml  run_container.sh
factory/: __main__.py  cargo.py  config.py  context.py  deps.py  log.py  monitor.py  orchestrator.py  pipeline.py  runner.py  state.py  triage.py
prompts/: analyze_deps.md  implement.md  plan.md  summarize.md  understand.md  verify.md  write_tests.md
