[project]
name = "factory2"
version = "0.1.0"
description = "AI software factory — turns user stories into working Rust code"
requires-python = ">=3.11"
# No external dependencies — stdlib only

[project.scripts]
factory = "factory.__main__:main"
factory-monitor = "factory.monitor:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["factory*"]
